@@ -28,6 +28,6 @@ class AgentTasksEnhancer implements Action<Project> {
 
     private void addAgent(Project project, JavaExec exec, File agent) {
         exec.jvmArgs "-javaagent:$agent.absolutePath"
-        exec.jvmArgs "-noverify"
+        exec.jvmArgs "-Xverify:none"
     }
 }
